--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,21 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'PT Sans', sans-serif;
 }
 /* variable */
 :root{
     --primary-color:#0084fd;
+    --primary-card-color:#b5ddff;
 }
 /* common */
 .container{
-    max-width: 1140px;
+    max-width: 71.25rem;
     margin: auto;
 }
 .button{
-    padding: 10px;
-    border-radius: 40px;
+    padding: 0.625rem;
+    border-radius: 2.5rem;
     border: none;
 }
 /* header */
@@ -33,7 +34,7 @@ header{
     align-items: center;
 }
 .hamburgher-menu{
-    font-size: 1.375em;
+    font-size: 1.375rem;
 }
 /* parte visibile dopo i 992px */
 .nav-header{
@@ -64,8 +65,102 @@ header{
         display: flex;
     }
     .container{
-        max-width: 1140px;
+        max-width: 71.25rem;
         margin: auto;
     }
     
+}
+/* main */
+.card-highlights1{
+    background-color: var(--primary-card-color);
+    border-radius: 5%;
+    margin: 1.875rem;
+}
+.col1-img{
+    padding: 0 1.875rem; 
+}
+.col1-img h2{
+    color: var(--primary-color);
+    padding: 1.563rem 0;
+}
+.col1-img p{
+    color: #5a6e7f;
+}
+.app-store{
+    background-color: var(--primary-color);
+    color: white;
+    padding: 0.625rem 3.125rem;
+    margin: 2.5rem 0;
+}
+.col2{
+    text-align: center;
+    height: 16.875rem;
+}
+.img-highlights{
+    height: 16.875rem;
+    width: 12.5rem;
+}
+.card-highlights2{
+    background-color: var(--primary-card-color);
+    border-radius: 5%;
+    margin: 1.875rem;
+}
+.card-highlights{
+    background-color: var(--primary-card-color);
+    border-radius: 5%;
+    margin: 1.875rem;
+}
+.col1{
+    text-align: center;
+}
+.icon-highlights{
+    font-size: 5rem;
+    color: var(--primary-color);
+    padding: 1.563rem 0;
+}
+.col1 h2{
+    color: var(--primary-color);
+}
+.col1 p{
+    color: #5a6e7f;
+    padding: 1.875rem 0;
+}
+/* responsiv highlights  */
+@media screen and (min-width:768px){
+    .highlights{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .card-highlights1{
+        width: calc(66.66% - 1.875rem);
+        margin-top: 2.5rem;
+        margin-left: 0.938rem;
+    }
+    .card-highlights2{
+        width: calc(33.33% - 1.875rem);
+        margin-top: 2.5rem;
+        margin-right: 0.938rem;
+        margin-bottom: 1.875rem;
+        margin-left: 0;
+    }
+    .col2{
+        text-align: left;
+        height: 16.875rem;
+        padding-left: 2.5rem;
+    }
+    .card-highlights{
+       width: calc(100% / 3 - 1.875rem);
+       margin: auto;
+    }
+}
+@media screen  and (min-width:992px){
+    .card-highlights1{
+        display: flex;
+    }
+    .col2{
+        padding: 0;
+        height: 16.875rem;
+        margin-top: 3.688rem;
+        margin-right: 6.25rem;
+    }
 }
